5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1716_2508.log
== SUBMITION (2019-05-16 15:55:21) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 3
sinal = -1
soma = x
while(i<k):
	soma = soma + (sinal * ((x**a)/factorial(a)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- EXECUTION TIME:
0.253718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:55:28) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 3
sinal = -1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/factorial(a)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- EXECUTION TIME:
0.19928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:56:45) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 3
sinal = -1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:56:51) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 3
sinal = -1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- EXECUTION TIME:
0.128869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:57:29) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 2
sinal = -1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- EXECUTION TIME:
0.212869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:58:04) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
i = 1
a = 2
sinal = 1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,10))
-- EXECUTION TIME:
0.223814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 3, in <module>
    k = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:58:52) 
-- CODE:
from math import *
k = int(input())
i = 1
a = 2
sinal = 1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,8))
-- EXECUTION TIME:
0.211779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 6, in <module>
    soma = x
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:59:01) 
-- CODE:
from math import *
k = int(input())
i = 1
a = 2
sinal = 1
soma = x
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:59:23) 
-- CODE:
from math import *
k = int(input())
i = 1
a = 2
sinal = 1
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,8))
-- EXECUTION TIME:
0.187851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 7, in <module>
    soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:59:24) 
-- CODE:
from math import *
k = int(input())
i = 1
a = 2
sinal = 1
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:01:18) 
-- CODE:
from math import *
k = int(input())
i = 1
a = 2
sinal = 1
soma = 
while(i<k):
	soma = soma + (sinal * ((4)/a*(a+1)*(a+2)))
	a = a +2
	i = i+1
	sinal = sinal*(-1)

print(round(soma,8))
-- ERROR:
File "XXXX", line 6
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
